--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.androidplot:androidplot-core:0.6.1'
+    compile 'com.android.support:cardview-v7:21.0.+'
+
 }
