--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.androidplot:androidplot-core:0.6.1'
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile "com.android.support:appcompat-v7:22.1.+"
+
+
 
 }
