--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.androidplot:androidplot-core:0.6.1'
     compile 'com.android.support:cardview-v7:21.0.+'
-    compile "com.android.support:appcompat-v7:22.1.+"
-
-
-
+    compile 'com.android.support:appcompat-v7:22.1.+'
+    compile 'com.github.lecho:hellocharts-library:1.5.5@aar'
+    compile project(':mpandroidchartlibrary-2-1-0')
 }
