Upgraded reports and accounts activities
Reports: Added most expensive purchases
Accounts: Refreshed layout into material design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,8 @@
 
         <activity android:name="com.mushroomrobot.finwiz.reports.ReportsActivity"
             android:screenOrientation="portrait"
-            android:label="Report"
-            android:parentActivityName=".budget.DisplayBudgetActivity"
+            android:label="Reports"
+            android:noHistory="true"
             />
 
 
