--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".SplashActivity"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name="com.mushroomrobot.finwiz.account.DisplayAccountActivity"
             android:screenOrientation="portrait"
@@ -26,12 +36,7 @@
         <activity
             android:name="com.mushroomrobot.finwiz.budget.DisplayBudgetActivity"
             android:screenOrientation="portrait"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+           />
 
         <activity android:name="com.mushroomrobot.finwiz.budget.BudgetDetailsActivity"
             android:screenOrientation="portrait"
@@ -49,6 +54,13 @@
             android:noHistory="true"
             />
 
+        <activity android:name=".settings.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/settings_label" />
+
+        <activity android:name=".settings.SettingsActivityDraft"
+            android:screenOrientation="portrait"
+            android:label="@string/settings_label" />
 
         <provider
             android:name="com.mushroomrobot.finwiz.data.EverythingProvider"
