--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.mushroomrobot.finwiz"
         minSdkVersion 19
         targetSdkVersion 22
-        versionCode 5
-        versionName "1.0"
+        versionCode 6
+        versionName "1.01"
     }
     buildTypes {
         release {
@@ -22,8 +22,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.androidplot:androidplot-core:0.6.1'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:appcompat-v7:22.1.+'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
+
     compile 'com.github.lecho:hellocharts-library:1.5.5@aar'
     compile project(':mpandroidchartlibrary-2-1-0')
     compile project(':opencsv-3.4')
